--- a/package.json
+++ b/package.json
@@ -38,5 +38,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-edit-inline": "^1.0.8",
+    "riek": "^1.1.0"
   }
 }
