--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
+    "reactstrap": "^8.4.1",
     "uuid": "^3.4.0"
   },
   "scripts": {
